add web and inst config